--- a/src/assets/styles/blocks/_search-input.scss
+++ b/src/assets/styles/blocks/_search-input.scss
@@ -5,8 +5,10 @@
     filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.08));
     padding: 14px 20px;
     border-radius: 10px;
+    transition: opacity 0.5s;
 
     &__input {
         width: 250px;
+        transition: opacity 0.5s;
     }
 }
